@@ -1,6 +1,8 @@
 0.5.1
   * Added jinja2 to the list of install dependencies
   * Fixed the segfault associated with the DR spectrometer reader
+  * Cleaned up how splitDRX.py offsets in a file
+  * Removed splitTBW.py since it is no longer needed
 
 0.5.0
   * Worked on adding better polarization support to correlator.fx and correlator.uvUtils
